# rust

./: .gitignore
aesWasm/: Cargo.toml
aesWasm/src/: main.rs
algebraic_effects/: Cargo.toml  README.md  index.html
algebraic_effects/src/: dark_theme.css  enum_gather.rs  lib.rs  main.rs  mod.rs  router.rs
algebraic_effects/src/components/: mod.rs
algebraic_effects/src/components/button/: mod.rs  style.css
algebraic_effects/src/hooks/: mod.rs  use_change_theme.rs  use_default_theme.rs  use_icon_color.rs  use_style_file_path.rs  use_theme.rs  use_theme_file.rs
algebraic_effects/src/pages/: advantages.rs  effect.rs  home.css  home.rs  mod.rs  rust.rs  usage.rs  webassembly.rs
algebraic_effects/src/store/: menu.rs
algebraic_effects/src/styles/: advantages_dark.css  dark_theme.css  effect_dark.css  home_dark.css  home_light.css  light_theme.css  main.css  rust_dark.css  rust_light.css  usage_dark.css  webassembly_dark.css  webassembly_light.css
algebraic_effects/src/types/: icon.rs  menu.rs  mod.rs  router.rs  theme.rs
algebraic_effects/src/utils/: mod.rs
clock/: Cargo.toml
train/complex-num/src/: main.rs
train/feature/: Cargo.toml
train/feature/src/: main.rs
train/hello_world/src/: main.rs
train/variables/src/: main.rs
train/world_hello/src/: main.rs
web_app/: Cargo.toml  index.html
web_app/src/: lib.rs  main.css  main.rs  router.rs
web_app/src/api/: base_api_uri.txt  index.rs  mod.rs  test.rs
web_app/src/store/: counter.rs  func_login.rs  login.rs  mod.rs
yew-app/: index.html
yew-app/src/: main.rs
(+30 files in other folders)
