[package]
name = "aes_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.7.4", features = ["ctr"] }
block-modes = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
criterion = "0.5"
thiserror = "1.0.38"
displaydoc = "0.2"
